fix misalignment of header nav items on 1x pixel density screens

--- a/src/lbcamden/components/header/includes/_navigation-items.scss
+++ b/src/lbcamden/components/header/includes/_navigation-items.scss
@@ -196,6 +196,8 @@
       @include govuk-responsive-padding(3, "right");
       border-left: 1px solid lbcamden-colour("light-grey-2");
     }
+
+    line-height: normal;
   }
 }
 
